--- a/Tuples_sets_Boolean.ipynb
+++ b/Tuples_sets_Boolean.ipynb
@@ -3,23 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7c7ddb24",
+   "id": "346ac26b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_list=[1,2,3]"
+    "t=(1,2,3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82828ab9",
+   "id": "ab55813c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "(1, 2, 3)"
       ]
      },
      "execution_count": 2,
@@ -28,29 +28,40 @@
     }
    ],
    "source": [
-    "len(my_list)"
+    "t"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "45da7be5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_list=['love',\"life\",3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a596e09c",
+   "id": "c49bf8a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'love'"
+       "tuple"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d9b309b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
       ]
      },
      "execution_count": 4,
@@ -59,60 +70,81 @@
     }
    ],
    "source": [
-    "my_list [0]"
+    "len(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5064a2e5",
+   "execution_count": 5,
+   "id": "3816b6e0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['love', 'life']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "my_list [0:2]"
+    "t=('one','two',5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "92257267",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "another_list=['do','it']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "6d926960",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_list=my_list+another_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e560b99f",
+   "id": "39ba08dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['love', 'life', 3, 'do', 'it']"
+       "5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aae70b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=('a','a','b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d0034b47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.count('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "696636d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
       ]
      },
      "execution_count": 12,
@@ -121,60 +153,58 @@
     }
    ],
    "source": [
-    "new_list"
+    "t.index('b')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a01aee22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_list [0]='sad'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0c7dc246",
+   "id": "bef4850f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sad', 'life', 3, 'do', 'it']"
+       "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_list"
+    "t.index('a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59538fcb",
+   "metadata": {},
+   "source": [
+    "# set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "50e21718",
+   "id": "1551212a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_list.append(\"six\")"
+    "myset=set()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7738f275",
+   "id": "19cb2c93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['sad', 'life', 3, 'do', 'it', 'six']"
+       "set()"
       ]
      },
      "execution_count": 17,
@@ -183,134 +213,91 @@
     }
    ],
    "source": [
-    "new_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "91453885",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'six'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_list.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "87571d33",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['sad', 'life', 3, 'do', 'it']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_list"
+    "myset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e5320aea",
+   "id": "66155dce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myset.add(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "98585e17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'sad'"
+       "{1}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_list.pop(0)"
+    "myset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d1e85925",
+   "id": "3ebd7074",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_list=['a','c','e','r','t','x']\n",
-    "num_list=[4,1,6,8]"
+    "myset.add(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0863a9e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_list.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "bc3717cb",
+   "id": "c61e86b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a', 'c', 'e', 'r', 't', 'x']"
+       "{1, 2}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_list"
+    "myset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4df5875",
+   "execution_count": 25,
+   "id": "db40f41e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_list.sort()"
+    "mylist=[1,1,1,1,1,4,4,4,4,5,6]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cd7633df",
+   "id": "1530db48",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 4, 6, 8]"
+       "{1, 4, 5, 6}"
       ]
      },
      "execution_count": 26,
@@ -319,19 +306,27 @@
     }
    ],
    "source": [
-    "num_list"
+    "set(mylist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa706a4",
+   "metadata": {},
+   "source": [
+    "# Boolean"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c1be97bd",
+   "id": "81161a6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 6, 4, 1]"
+       "True"
       ]
      },
      "execution_count": 27,
@@ -340,14 +335,140 @@
     }
    ],
    "source": [
-    "num_list.reverse()\n",
-    "num_list"
+    "True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6fd34854",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'true' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_8628\\592217714.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'true' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8e6fd13c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "89f48228",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4421e83c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1>2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c929f81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2>1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "75b0564e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1==1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ac469f9",
+   "id": "b6351168",
    "metadata": {},
    "outputs": [],
    "source": []
